# AI-Needs-Assessment

./: .env.example  .eslintrc.js  .gitignore  README.md  next.config.mjs  package.json  pnpm-lock.yaml  pyproject.toml  tailwind.config.ts  tsconfig.json  vitest.config.ts
app/: main.py  page.tsx
app/[project]/: layout.tsx  page.tsx
app/[project]/ideas/: page.tsx
app/[project]/personas/: page.tsx
app/[project]/rag/: page.tsx
app/[project]/simulation/: page.tsx
app/api/: routes.py  routes_persona.py
app/core/: config.py
app/data/: seed.py
app/schemas/: common.py  idea.py  persona.py  project.py
app/services/: gpt_adapter.py  persona_aliases.py  simulate.py  statkit.py  store.py
app/utils/: json_safety.py
docs/: persona-survey-template.md
shared/: persona-aliases.json
src/app/: layout.tsx  page.tsx
src/app/[project]/: layout.tsx  page.tsx
src/app/ideas/: page.tsx
src/app/personas/: page.tsx
src/app/rag/: page.tsx
src/app/reports/: page.tsx
src/app/simulate/: page.tsx
src/components/cards/: FactorContributionCard.tsx  PsfPmfCard.tsx  ScoreSummaryCard.tsx
src/components/charts/: ConfidenceArea.tsx  ContributionBar.tsx  RevenueForecastChart.tsx  TrendSparkline.tsx
src/components/forms/: FiltersBar.tsx  IdeaForm.tsx  PersonaForm.tsx  (+1 more)
src/lib/: apiClient.test.ts  apiClient.ts  featureFlags.ts  i18n.ts  mockData.ts  personaRegistry.ts  projects.ts  store.ts  types.ts  utils.ts
src/locales/: ja.json
src/store/: personaStore.ts  projectStore.ts
src/styles/: globals.css
tests/: personaEditor.test.tsx  test_smoke.py
(+27 files in other folders)
